# haskell-barchart

./: .ghci  .gitignore  LICENSE  Makefile  README.markdown  bar-chart.cabal  barchart.cabal  index.html  logo.hs  logo.html  logo.include  logo.lhs  style.css
Graphics/: BarChart.hs
api/doc/html/barchart/: Graphics-BarChart.html  barchart.haddock  doc-index.html  index-frames.html  index.html  mini_Graphics-BarChart.html
api/doc/html/barchart/src/: Graphics-BarChart-Parser-Criterion.html  Graphics-BarChart-Parser-Progression.html  Graphics-BarChart-Parser.html  Graphics-BarChart-Rendering.html  Graphics-BarChart-Types.html  Graphics-BarChart.html
examples/: factorial.hs  guitar-mean.csv  guitar-months.csv  guitar.csv  top5.csv
src/: bar-chart.hs  barchart.hs
src/Graphics/: BarChart.hs
src/Graphics/BarChart/: Parser.hs  Rendering.hs  Types.hs
src/Graphics/BarChart/Parser/: Criterion.hs  Progression.hs
