Name:          bar-chart
Version:       0.0
Cabal-Version: >= 1.6
Build-Type:    Simple

Executable bar-chart
  Main-Is:              bar-chart.hs
  Hs-Source-Dirs:       src
  Build-Depends:        base >= 3 && < 5, filepath == 1.1.*,
                        cmdargs == 0.1.*, csv == 0.1.*, diagrams == 0.2.*
  Extensions:           NamedFieldPuns, RecordWildCards, DeriveDataTypeable